--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,7 @@
 // Navigation code here
 .nav{
+    position: fixed;
+    width: 95%;
     .flexbox-style(flex, center);
     flex-direction: column;
     text-align: center;
